[tool.poetry]
name = "network-graph-visualization"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"
Sphinx = "^3.5.1"
pandas = "^1.2.2"
matplotlib = "^3.3.4"
networkx = "^2.5"
plotly = "^4.14.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
