[tool.poetry]
name = "network-graph-visualization"
version = "0.1.6"
description = "This package creates a visualization of a network graph with its attributes displayed."
authors = ["Annalie Kruseman <annaliakruseman@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://network-graph-visualization.readthedocs.io/en/latest/"
repository = "https://github.com/annalieNK/network-graph-visualization"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
]

[[tool.poetry.source]]
name = "network-graph-visualization"
url = "https://test.pypi.org/simple/"

[tool.poetry.dependencies]
python = "^3.8.6"
pandas = "^1.2.2"
matplotlib = "^3.3.4"
networkx = "^2.5"
plotly = "^4.14.3"
numpy = "1.19.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
Sphinx = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
